<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/icon_home" />

    <item
        android:id="@+id/transactionsFragment"
        android:title="@string/transactions"
        android:icon="@drawable/icon_list" />

<!--    <item-->
<!--        android:id="@+id/newFragment"-->
<!--        android:title="New"-->
<!--        android:icon="@drawable/btn_floating_plus" />-->

    <item
        android:id="@+id/budgetFragment"
        android:title="@string/budget"
        android:icon="@drawable/icon_graph" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile" />

</menu>
