<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_main">


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="+"
        android:text="@string/bt_new"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/primary"
        app:icon="@drawable/plus_svgrepo_com"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hiUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/hi_userName"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <ImageButton
        android:id="@+id/profile_icon_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="152dp"
        android:layout_marginTop="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toEndOf="@+id/hiUserName"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="337dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_balance_card"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/all_transactions"
        android:textColor="#101828"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTransactions"
        android:layout_width="364dp"
        android:layout_height="336dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="228dp"
        android:gravity="center"
        android:text="@string/no_transactions_found"
        android:visibility="gone"
        android:textColor="@color/neutralGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        />

    <ImageView
        android:id="@+id/total_balance_card"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="19dp"
        android:layout_marginHorizontal="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_balance"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="@+id/total_balance_card"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="@+id/total_balance_card"
        app:layout_constraintTop_toTopOf="@+id/total_balance_card" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/total_balance_main_screen"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/total_balance_card"
        app:layout_constraintEnd_toEndOf="@+id/total_balance_card"
        app:layout_constraintStart_toStartOf="@+id/total_balance_card"
        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />


</androidx.constraintlayout.widget.ConstraintLayout>