<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_main">

    <ImageView
        android:id="@+id/header_card"
        android:layout_width="374dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card" />



    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_transaction"
        android:textColor="#101828"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/header_card"
        app:layout_constraintTop_toTopOf="@+id/header_card" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/record_your_income_or_expense"
        android:textColor="#A0101828"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/header_card"
        app:layout_constraintStart_toStartOf="@+id/header_card" />

    <ImageView
        android:id="@+id/transaction_selector_card"
        android:layout_width="374dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_card"
        app:srcCompat="@drawable/card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewIncome"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/income"
        android:textColor="@color/white"
        app:backgroundTint="@color/neutralGray"
        app:layout_constraintEnd_toEndOf="@+id/transaction_selector_card"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnNewExpense"
        app:layout_constraintTop_toTopOf="@+id/transaction_selector_card"
        app:rippleColor="@color/Secondary"
        app:shapeAppearanceOverlay="@style/IncomeButtonShape" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewExpense"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/expense"
        android:textColor="@color/white"
        app:backgroundTint="@color/redExpense"
        app:layout_constraintStart_toStartOf="@+id/transaction_selector_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_selector_card"
        app:rippleColor="@color/Secondary"
        app:shapeAppearanceOverlay="@style/ExpenseButtonShape" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/select_date"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/transaction_selector_card"
        app:layout_constraintTop_toBottomOf="@+id/transaction_selector_card" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/no_date_selected"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/transaction_selector_card"
        app:layout_constraintTop_toBottomOf="@+id/transaction_selector_card" />

    <ImageView
        android:id="@+id/transaction_amount_card"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_marginTop="19dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectDate"
        app:srcCompat="@drawable/card" />

    <ImageView
        android:id="@+id/transaction_description_card"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_marginTop="19dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_category_card"
        app:srcCompat="@drawable/card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/primary"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelTransaction"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="@+id/transaction_description_card"
        app:layout_constraintTop_toBottomOf="@+id/transaction_description_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="70dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black_overlay"
        app:cornerRadius="10dp"

        app:layout_constraintBaseline_toBaselineOf="@+id/btnNewTransaction"
        app:layout_constraintEnd_toEndOf="@+id/transaction_description_card"
        app:strokeColor="@color/black_overlay"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/transaction_amount_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_amount_card" />

    <ImageView
        android:id="@+id/transaction_category_card"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:layout_marginTop="19dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_card"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@+id/transaction_category_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_category_card" />


    <FrameLayout
        android:id="@+id/dropdownContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="33dp"
        android:elevation="4dp"
        android:translationZ="2dp"
        app:layout_constraintStart_toStartOf="@+id/transaction_category_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_category_card">

        <!-- Your custom image background -->
        <ImageView
            android:id="@+id/imgDropdownBg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="category_background"
            android:scaleType="fitXY"
            android:src="@drawable/textfield"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="507dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownCategoryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:elevation="8dp"
            android:translationZ="8dp"
            android:background="@android:color/transparent"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:inputType="none"
                android:paddingStart="16dp"
                android:paddingEnd="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Secondary" />
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

<!--    <ImageView-->
<!--        android:id="@+id/imageView17"-->
<!--        android:layout_width="320dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:scaleType="fitXY"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/transaction_category_card"-->
<!--        app:layout_constraintStart_toStartOf="@+id/transaction_category_card"-->
<!--        app:layout_constraintTop_toTopOf="@+id/transaction_category_card"-->
<!--        app:srcCompat="@drawable/textfield" />-->

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/transaction_description_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_description_card" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/transaction_amount_card"
        app:layout_constraintStart_toStartOf="@+id/transaction_amount_card"
        app:layout_constraintTop_toTopOf="@+id/transaction_amount_card"
        app:srcCompat="@drawable/textfield" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/transaction_description_card"
        app:layout_constraintEnd_toEndOf="@+id/transaction_description_card"
        app:layout_constraintStart_toStartOf="@+id/transaction_description_card"
        app:srcCompat="@drawable/textfield" />

    <EditText
        android:id="@+id/newAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="$ 0.00"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/Secondary"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />


    <EditText
        android:id="@+id/newDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/what_was_this_for"
        android:inputType="text"
        android:textColorHint="@color/Secondary"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />




</androidx.constraintlayout.widget.ConstraintLayout>