<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_main">

    <ImageView
        android:id="@+id/card_transactions"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/transactions"
        android:textColor="#101828"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_transactions"
        app:layout_constraintTop_toTopOf="@+id/card_transactions" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/card_transactions"
        app:layout_constraintEnd_toStartOf="@+id/myButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_transactions"
        app:srcCompat="@drawable/textfield" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="33dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/filter"
        app:cornerRadius="10dp"
        app:icon="@drawable/filter"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/card_transactions"
        app:layout_constraintEnd_toEndOf="@+id/card_transactions" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_transactions"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/all_transactions"
        android:textColor="#101828"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTransactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="228dp"
        android:gravity="center"
        android:text="@string/no_transactions_found"
        android:visibility="gone"
        android:textColor="@color/neutralGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>